@@ -1068,6 +1068,7 @@
           02-08-09  Bfo     The "real" process descriptor prepared due to problems with "time" and "ps"
           02-08-09  Bfo     New procedure set_os9_state introduced and adapted everywhere.
           02-08-13  Bfo     The state <dead> will be handled correctly now (state=0x9100)
+          02-08-13  Bfo     Some more variables defined at the real procid struct now.
     3.16  02-08-??  Bfo     ...
     -------------------
 */
@@ -1090,6 +1091,7 @@
     -   Problems 'ps -e' and check memory info of "ps" (for trap handlers)
     -   inode support for transparent Mac file system
     -   A$AtDate restricted to 248 days / will not adjust when system time changes
+    -   'showprocs -e' crash on Windows.
 
    (+)  Take tty00/pty00 first (problems with arbitration)
    (+)  setime_Y2K version with param passing --> 1900
